--- a/packages/application/app/src/main/res/values/strings.xml
+++ b/packages/application/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">P.A.R.T</string>
+    <string name="app_name" translatable="false">P.A.R.T</string>
+    <string name="hello">hello</string>
+    <string name="world">world</string>
 </resources>
