Почато створення сторінки створення нового зображення

--- a/packages/application/app/src/main/res/values-uk/strings.xml
+++ b/packages/application/app/src/main/res/values-uk/strings.xml
@@ -6,7 +6,7 @@
     <string name="password">пароль</string>
     <string name="repeat">повторіть пароль</string>
     <string name="new_art">Новий піксель арт</string>
-    <string name="size">Розміри(ШхД)</string>
+    <string name="size">Розміри(ШхВ)</string>
     <string name="init_color_scheme">Початкова кольорова схема</string>
     <string name="init_layers_num">Початкова кількість шарів</string>
     <string name="name">Назва</string>
