Розпочато створення бази даних, додано збереження мови, мінорні правки.

--- a/packages/application/app/src/main/res/values-uk/strings.xml
+++ b/packages/application/app/src/main/res/values-uk/strings.xml
@@ -24,4 +24,5 @@
     <string name="change_key">змінити ключ</string>
     <string name="drawings">рисунки</string>
     <string name="app_themes">теми програми</string>
+    <string name="create">СТВОРИТИ</string>
 </resources>
