--- a/packages/application/app/src/main/res/values/strings.xml
+++ b/packages/application/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="app_themes">app themes</string>
     <string name="create">CREATE</string>
     <string name="turtle" translatable="false">for real turtles</string>
+    <string name="color">Pick a Color</string>
+    <string name="add">Add</string>
+    <string name="cancel">Cancel</string>
 </resources>
