--- a/packages/application/app/src/main/res/values-uk/strings.xml
+++ b/packages/application/app/src/main/res/values-uk/strings.xml
@@ -28,4 +28,5 @@
     <string name="color">Вибери колір</string>
     <string name="add">Додати</string>
     <string name="cancel">Скасувати</string>
+    <string name="save">Зберегти</string>
 </resources>
