--- a/packages/application/app/src/main/res/values/strings.xml
+++ b/packages/application/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="color">Pick a Color</string>
     <string name="add">Add</string>
     <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
 </resources>
